lp 新增預覽頁面

--- a/sass/_variable_personal.scss
+++ b/sass/_variable_personal.scss
@@ -3,8 +3,9 @@
 
 //---------------------------------------------------顏色---------//
 // 定義顏色 此顏色可自由變換
-$primaryColor: #009e96; //主色
-$secondaryColor: #9dd095; //輔色
+
+$primaryColor: #7a5238; //主色
+$secondaryColor: #f3d174; //輔色
 $lightColor: #fc6a4a; //點綴
 $linkColor: #0066cc; //連結
 $importantColor: #eb0202; //重要
@@ -40,7 +41,7 @@ $font-size: 1em;
 // 格線系統
 $grid-columns: 12 !default;                //格線欄位數
 $grid-gutter-width: 30px !default;         //左右padding
-$container-max: 1280px !default;           //container最大寬
+$container-max: 1200px !default;           //container最大寬
 
 //mediaquery
 $screen-lg: 1400px !default; 				//電腦
