--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -784,7 +784,8 @@ footer {
 
             >.container {
                 .white_zone {
-                    padding: 1em 1.25em;
+                    padding: 1em;
+                    border: 1px solid #fff;
                 }
             }
         }
@@ -909,6 +910,7 @@ footer {
     padding: 1.5em 2.5em;
     border-radius: 4px;
     margin: 2em 0;
+    line-height: 1.85;
 
     .title {
         span {
@@ -931,7 +933,7 @@ footer {
     }
 
     @include screen('mobile') {
-        padding: 1.5em 2.5em;
+        padding: 1em 1.5em;
         margin: 1em 0;
     }
 }
@@ -1122,6 +1124,27 @@ a {
 .info-review {
     background: #f8f8f8;
     padding: 1em 2em;
+    margin-top: 2em;
+
+    .cardInfo{
+      border: solid 1px #bbb;
+      background: #fff;
+      padding: 1.25em;
+      .caption{
+        margin: 0;
+      }
+      table th{
+        background: url(../images/bg-table-border.jpg) left bottom repeat-x, #535353;
+        color: #fff;
+      }
+      table tr:last-child th{
+        background: #535353 !important;
+      }
+    }
+
+    @include screen('mobile') {
+      padding: 1em;
+    }
 
     b.applicant{
         display: block;
@@ -1149,7 +1172,9 @@ a {
             background: #fff;
 
             > .content{
-                > section:last-child{
+                word-break: break-all;
+                > section:last-child,
+                > section:last-child > .grp:nth-last-child(2){
                     // border-bottom: 1px solid red;
                     position: relative;
                     &:after{
@@ -1159,7 +1184,7 @@ a {
                         height: 10px;
                         background: #fff;
                         left: 0;
-                        bottom: 0;
+                        bottom: -2px;
                     }
                 }
             }
@@ -1173,9 +1198,6 @@ a {
             p {
                 margin: .25em 0;
             }
-
-            ol,
-            ul {}
 
             .caption {
                 margin: 0;
@@ -1406,7 +1428,7 @@ $duration: 1.4s;
     }
 
     50% {
-        stroke-dashoffset: $offset/4;
+        stroke-dashoffset: calc($offset / 4);
         transform: rotate(135deg);
     }
 
@@ -1922,6 +1944,7 @@ b.B {
                     @include flex-sm-equal(4, $m-gutter);
                     @include flex-md-equal(8, $m-gutter);
                     @include flex-lg-equal(8, $m-gutter);
+                    margin-bottom: 10px;
 
                     time {}
 
@@ -1974,6 +1997,20 @@ b.B {
         top: 0;
         z-index: 1;
         transform: skewX(-12deg);
+    }
+
+    @include screen('mobile') {
+      background-position: 20px 10px;
+      padding-top: 13px;
+      b{
+        display: block;
+        margin-left: 0;
+        padding: 16px 2px 0;
+        color: #0541b1;
+      }
+      &:after{
+        display: none;
+      }
     }
 }
 .fill_steps{
