--- a/sass/sass/common/_typography.scss
+++ b/sass/sass/common/_typography.scss
@@ -1,156 +1,62 @@
 // from hyui_flex 的 _typography.scss 
-// .cp {
-//     font-size: 1em * 1.0666666;
-//     line-height: 1.65em;
-//     @include screen('xs_mobile') {
-//         font-size: 1em * 1.2;
-//     }
-//     h1 {
-//         font-size: 2em;
-//     }
-//     h2 {
-//         font-size: 1.75em;
-//         margin-bottom: 1.25em;
-//     }
-//     h3 {
-//         font-size: 1.5em;
-//     }
-//     h4 {
-//         font-size: 1.25em;
-//         margin-top: 0;
-//         margin-bottom: 1em;
-//     }
-//     h5 {
-//         font-size: 1.125em;
-//         margin-top: 0;
-//         margin-bottom: 1em;
-//     }
-//     h6 {
-//         font-size: 1.125em;
-//         margin-top: 0;
-//         margin-bottom: 1em;
-//     }
-//     p {
-//         font-size: 1em;
-//         line-height: 1.85em;
-//         margin-top: 0;
-//     }
-//     ul,
-//     ol {
-//         font-size: 1em;
-//         margin-bottom: 1em;
-//         li {
-//             margin-bottom: 0.5em;
-//         }
-//     }
-//     dd,
-//     th,
-//     td figure {
-//         font-size: 1em;
-//     }
-//     blockquote {
-//         background: #f1f1f1;
-//         font-style: normal;
-//         display: block;
-//         font-size: 1em;
-//         border-left: 5px solid $primaryColor;
-//         padding: 2em;
-//         box-sizing: border-box;
-//         margin: 0 0em 2em;
-//     }
-//     img {
-//         max-width: 100%;
-//         @include screen('mobile') {
-//             max-width: 100%;
-//             width: auto;
-//             clear: both;
-//         }
-//     }
-// }
-// @import "compass/_css3";
-
-
-
-@import "compass";
-$base-font-size: 18px;
-$base-line-height: 18px;
-$rhythm-unit: 'em';
-$base-font-stack: $font-family;
-@include establish-baseline();
-$grid-background-baseline-height: 2em;
-$show-baseline-grid-backgrounds: true;
-$grid-background-baseline-color: rgba(187, 187, 187, 0.4);
-.vertical_rhythm {
-    @include baseline-grid-background;
-    img {
-        float: left;
-        margin: 0 $base-font-size 0 0;
-    }
-}
-// +leader() = 設定margin-top
-// +padding-leader() = 設定padding-top
-// +trailer() = 設定margin-bottom
-// +padding-trailer() = 設定padding-bottom
 .cp {
-    @include adjust-font-size-to($base-font-size*1, 2); //預設cp的文字設定(有可能上搞資料未包標籤)
+    // font-size: 1em * 1.0666666;
+    line-height: 1.65em;
+    @include screen('xs_mobile') {
+        font-size: 1em * 1.2;
+    }
     h1 {
-        @include adjust-font-size-to($base-font-size*2, 3);
-        @include padding-leader(0);
-        @include trailer(.5);
+        font-size: 2em;
     }
     h2 {
-        @include adjust-font-size-to($base-font-size*1.5, 2);
-        @include padding-leader(0);
-        @include trailer(0);
+        font-size: 1.75em;
+        margin-bottom: 1.25em;
     }
     h3 {
-        @include adjust-font-size-to($base-font-size*1.25, 2);
-        @include padding-leader(0);
-        @include trailer(0);
+        font-size: 1.5em;
     }
     h4 {
-        @include adjust-font-size-to($base-font-size*1.25, 2);
-        @include padding-leader(0);
-        @include trailer(0);
+        font-size: 1.25em;
+        margin-top: 0;
+        margin-bottom: 1em;
     }
     h5 {
-        @include adjust-font-size-to($base-font-size*1.25, 2);
-        @include leader(0);
-        @include trailer(0);
+        font-size: 1.125em;
+        margin-top: 0;
+        margin-bottom: 1em;
     }
     h6 {
-        @include adjust-font-size-to($base-font-size*1, 2);
-        @include leader(0);
-        @include trailer(0);
+        font-size: 1.125em;
+        margin-top: 0;
+        margin-bottom: 1em;
     }
     p {
-        @include adjust-font-size-to($base-font-size*1, 2);
-        @include leader(0);
-        @include trailer(2);
+        font-size: 1em;
+        line-height: 1.85em;
+        margin-top: 0;
     }
     ul,
     ol {
-        @include adjust-font-size-to($base-font-size*1, 2);
-        @include leader(0);
-        @include trailer(2);
+        font-size: 1em;
+        margin-bottom: 1em;
+        li {
+            margin-bottom: 0.5em;
+        }
     }
     dd,
     th,
     td figure {
-        @include adjust-font-size-to($base-font-size);
+        font-size: 1em;
     }
     blockquote {
-        background: #f2f2f2;
+        background: #f1f1f1;
         font-style: normal;
         display: block;
-        @include adjust-font-size-to($base-font-size);
+        font-size: 1em;
         border-left: 5px solid $primaryColor;
-        padding: $base-font-size*2;
+        padding: 2em;
         box-sizing: border-box;
-        margin-left: .5em;
-        margin-right: .5em;
-        @include leader(0);
-        @include trailer(2);
+        margin: 0 0em 2em;
     }
     img {
         max-width: 100%;
@@ -161,3 +67,102 @@ $grid-background-baseline-color: rgba(187, 187, 187, 0.4);
         }
     }
 }
+@import "compass/_css3";
+// @import "compass/_functions";
+// @import "compass/_layout";
+// @import "compass/_reset-legacy";
+// @import "compass/_reset";
+// @import "compass/_support";
+@import "compass/_typography";
+// @import "compass/_utilities";
+
+// @import "compass";
+// $base-font-size: 18px;
+// $base-line-height: 18px;
+// $rhythm-unit: 'em';
+// $base-font-stack: $font-family;
+// @include establish-baseline();
+// $grid-background-baseline-height: 2em;
+// $show-baseline-grid-backgrounds: true;
+// $grid-background-baseline-color: rgba(187, 187, 187, 0.4);
+// .vertical_rhythm {
+//     @include baseline-grid-background;
+//     img {
+//         float: left;
+//         margin: 0 $base-font-size 0 0;
+//     }
+// }
+// // +leader() = 設定margin-top
+// // +padding-leader() = 設定padding-top
+// // +trailer() = 設定margin-bottom
+// // +padding-trailer() = 設定padding-bottom
+// .cp {
+//     @include adjust-font-size-to($base-font-size*1, 2); //預設cp的文字設定(有可能上搞資料未包標籤)
+//     h1 {
+//         @include adjust-font-size-to($base-font-size*2, 3);
+//         @include padding-leader(0);
+//         @include trailer(.5);
+//     }
+//     h2 {
+//         @include adjust-font-size-to($base-font-size*1.5, 2);
+//         @include padding-leader(0);
+//         @include trailer(0);
+//     }
+//     h3 {
+//         @include adjust-font-size-to($base-font-size*1.25, 2);
+//         @include padding-leader(0);
+//         @include trailer(0);
+//     }
+//     h4 {
+//         @include adjust-font-size-to($base-font-size*1.25, 2);
+//         @include padding-leader(0);
+//         @include trailer(0);
+//     }
+//     h5 {
+//         @include adjust-font-size-to($base-font-size*1.25, 2);
+//         @include leader(0);
+//         @include trailer(0);
+//     }
+//     h6 {
+//         @include adjust-font-size-to($base-font-size*1, 2);
+//         @include leader(0);
+//         @include trailer(0);
+//     }
+//     p {
+//         @include adjust-font-size-to($base-font-size*1, 2);
+//         @include leader(0);
+//         @include trailer(2);
+//     }
+//     ul,
+//     ol {
+//         @include adjust-font-size-to($base-font-size*1, 2);
+//         @include leader(0);
+//         @include trailer(2);
+//     }
+//     dd,
+//     th,
+//     td figure {
+//         @include adjust-font-size-to($base-font-size);
+//     }
+//     blockquote {
+//         background: #f2f2f2;
+//         font-style: normal;
+//         display: block;
+//         @include adjust-font-size-to($base-font-size);
+//         border-left: 5px solid $primaryColor;
+//         padding: $base-font-size*2;
+//         box-sizing: border-box;
+//         margin-left: .5em;
+//         margin-right: .5em;
+//         @include leader(0);
+//         @include trailer(2);
+//     }
+//     img {
+//         max-width: 100%;
+//         @include screen('mobile') {
+//             max-width: 100%;
+//             width: auto;
+//             clear: both;
+//         }
+//     }
+// }
