--- a/sass/sass/common/mixins/_image.scss
+++ b/sass/sass/common/mixins/_image.scss
@@ -15,7 +15,7 @@ img{
     &:before {
         display: inline-block;
         content: "";
-        padding-top: ($height / $width) * 100%;
+        padding-top: calc($height / $width) * 100%;
     }
     img {
         display: block;
