--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -1516,6 +1516,7 @@ b.B {
     }
 
     .info {
+        line-height: 1.85;
         ol {
             border: 1px solid #d4d4d4;
             padding: 1.125em 2em 1.125em 3em;
@@ -1781,6 +1782,7 @@ b.B {
 .time_reserve {
     .info {
         padding: 1.5em 0;
+        line-height: 1.85;
     }
 
     .date,
