--- a/css/PDF.css
+++ b/css/PDF.css
@@ -1690,32 +1690,46 @@ br {
 
 .btn-reduce,
 .btn-increase {
-  min-width: 45px;
-  height: 45px;
+  min-width: 30px;
+  height: 30px;
   font-size: 0;
   border-radius: 5px;
   border-radius: 50%;
 }
+.btn-reduce.disable,
+.btn-increase.disable {
+  opacity: 0.2;
+}
+.btn-reduce.disable:hover, .btn-reduce.disable:focus,
+.btn-increase.disable:hover,
+.btn-increase.disable:focus {
+  cursor: not-allowed;
+  background: url(../images/icon/icon_minus2.svg) 50% 50% no-repeat #474747 !important;
+  background-size: 14px 14px !important;
+  box-shadow: none !important;
+}
 
 .btn-reduce {
   background: url(../images/icon/icon_minus2.svg) 50% 50% no-repeat #474747 !important;
-  background-size: 16px 16px !important;
+  background-size: 14px 14px !important;
 }
 .btn-reduce:hover, .btn-reduce:focus {
   background: url(../images/icon/icon_minus2.svg) 50% 50% no-repeat #222 !important;
-  background-size: 16px 16px !important;
+  background-size: 14px 14px !important;
 }
 .btn-reduce + input {
   width: 120px !important;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .btn-increase {
   background: url(../images/icon/icon_add2.svg) 50% 50% no-repeat #474747 !important;
-  background-size: 16px 16px !important;
+  background-size: 14px 14px !important;
 }
 .btn-increase:hover, .btn-increase:focus {
   background: url(../images/icon/icon_add2.svg) 50% 50% no-repeat #222 !important;
-  background-size: 16px 16px !important;
+  background-size: 14px 14px !important;
 }
 
 .btn-back {
