--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -733,7 +733,7 @@ footer {
                     }
                 }
 
-                &.act{
+                &.hasTimer{
                     width: 50%;
                     margin: 0 0 5px;
                     // background: pink;
